# Kokkos-HPCG

./: CMakeLists.txt  LICENSE  Makefile  Makefile~  NameChangeTest  README  TestFileForCommitPurposes  TestNewSetup.txt  Testing_For_Pull  configure  hpcg_log_2014.08.28.10.16.36.txt
doc/: .~lock.Results.ods#  Makefile  Results.ods  Results.txt  ZacharyBookey.aux  ZacharyBookey.bbl  ZacharyBookey.bib  ZacharyBookey.blg  ZacharyBookey.tex  ccr15.cls
doc/plots/: HeirarchialSnippet.cpp  OriginalSnippet.cpp  StandardSnippet.cpp
setup/: Make.ICPC_OMP  Make.Linux_Serial  Make.MPI_ICPC_OMP  Make.MPI_ICPC_OMP~
src/: .SparseMatrix.hpp.swp  CG.cpp  CG.hpp  CGData.hpp  CG_ref.cpp  CG_ref.hpp  CMakeLists.txt  ColorSYMGS.cpp  ColorSYMGS.hpp  ComputeDotProduct.cpp  ComputeDotProduct.hpp  ComputeDotProduct_ref.cpp  ComputeDotProduct_ref.hpp  ComputeMG.cpp  ComputeMG.hpp  ComputeMG_ref.cpp  ComputeMG_ref.hpp  ComputeProlongation_ref.cpp  ComputeProlongation_ref.hpp  ComputeResidual.cpp  ComputeResidual.hpp  ComputeRestriction_ref.cpp  ComputeRestriction_ref.hpp  ComputeSPMV.cpp  ComputeSPMV.hpp  ComputeSPMV_ref.cpp  ComputeSPMV_ref.hpp  ComputeSYMGS.cpp  ComputeSYMGS.hpp  ComputeSYMGS_ref.cpp  ComputeSYMGS_ref.hpp  ComputeWAXPBY.cpp  ComputeWAXPBY.hpp  ComputeWAXPBY_ref.cpp  ComputeWAXPBY_ref.hpp  Details_FixedHashTable_def.hpp  ExchangeHalo.cpp  ExchangeHalo.cpp~  ExchangeHalo.hpp  GenerateCoarseProblem.cpp  (+45 more)
